// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TapGestureIcon should render with both custom color and size 1`] = `
<View
  style={
    {
      "paddingHorizontal": 2,
    }
  }
>
  <Svg
    height={25}
    viewBox="1 1 30 44"
    width={25}
  >
    <Rect
      height="40"
      rx="7"
      ry="7"
      stroke="#00ff00"
      strokeWidth={4}
      width="28"
      x="3"
      y="3"
    />
    <Circle
      cx="17"
      cy="17"
      fill="#00ff00"
      r="5"
    />
    <Circle
      cx="17"
      cy="31"
      fill="#00ff00"
      r="5"
    />
  </Svg>
</View>
`;

exports[`TapGestureIcon should render with custom color 1`] = `
<View
  style={
    {
      "paddingHorizontal": 2,
    }
  }
>
  <Svg
    height={20}
    viewBox="1 1 30 44"
    width={20}
  >
    <Rect
      height="40"
      rx="7"
      ry="7"
      stroke="#ff0000"
      strokeWidth={4}
      width="28"
      x="3"
      y="3"
    />
    <Circle
      cx="17"
      cy="17"
      fill="#ff0000"
      r="5"
    />
    <Circle
      cx="17"
      cy="31"
      fill="#ff0000"
      r="5"
    />
  </Svg>
</View>
`;

exports[`TapGestureIcon should render with custom size 1`] = `
<View
  style={
    {
      "paddingHorizontal": 2,
    }
  }
>
  <Svg
    height={30}
    viewBox="1 1 30 44"
    width={30}
  >
    <Rect
      height="40"
      rx="7"
      ry="7"
      stroke="#0a84ff"
      strokeWidth={4}
      width="28"
      x="3"
      y="3"
    />
    <Circle
      cx="17"
      cy="17"
      fill="#0a84ff"
      r="5"
    />
    <Circle
      cx="17"
      cy="31"
      fill="#0a84ff"
      r="5"
    />
  </Svg>
</View>
`;

exports[`TapGestureIcon should render with default props 1`] = `
<View
  style={
    {
      "paddingHorizontal": 2,
    }
  }
>
  <Svg
    height={20}
    viewBox="1 1 30 44"
    width={20}
  >
    <Rect
      height="40"
      rx="7"
      ry="7"
      stroke="#0a84ff"
      strokeWidth={4}
      width="28"
      x="3"
      y="3"
    />
    <Circle
      cx="17"
      cy="17"
      fill="#0a84ff"
      r="5"
    />
    <Circle
      cx="17"
      cy="31"
      fill="#0a84ff"
      r="5"
    />
  </Svg>
</View>
`;
